added more performance metrics and fixed overfitting

--- a/Case-Study-1/breast_cancer.ipynb
+++ b/Case-Study-1/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,20 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score, r2_score\n",
+    "from sklearn.metrics import accuracy_score, r2_score, confusion_matrix\n",
     "from sklearn.linear_model import LogisticRegression, LinearRegression\n",
     "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
     "from sklearn.ensemble import AdaBoostClassifier, AdaBoostRegressor\n",
     "from sklearn.svm import SVC, SVR\n",
     "from xgboost import XGBClassifier, XGBRegressor\n",
     "from catboost import CatBoostClassifier, CatBoostRegressor\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,92 +56,134 @@
     "\n",
     "def logistic_regression(X_train, y_train, X_test, y_test):\n",
     "    predictor = LogisticRegression()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def support_vector_classifier(X_train, y_train, X_test, y_test, kernel='rbf'):\n",
     "    predictor = SVC(kernel=kernel)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def support_vector_regressor(X_train, y_train, X_test, y_test, kernel='rbf'):\n",
     "    predictor = SVR(kernel=kernel)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2\n",
+    "    return r2, runtime\n",
     "\n",
     "def decision_tree_classifier(X_train, y_train, X_test, y_test):\n",
     "    predictor = DecisionTreeClassifier()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy    \n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def decision_tree_regressor(X_train, y_train, X_test, y_test):\n",
     "    predictor = DecisionTreeRegressor()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime\n",
     "\n",
     "def linear_regression(X_train, y_train, X_test, y_test):\n",
     "    predictor = LinearRegression()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2\n",
+    "    return r2, runtime\n",
     "\n",
     "def adaboost_classifier(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = AdaBoostClassifier(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def xgboost_classifier(X_train, y_train, X_test, y_test, n_estimators=200, random_state=42):\n",
     "    predictor = XGBClassifier(n_estimators=n_estimators, random_state=random_state)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def catboost_classifier(X_train, y_train, X_test, y_test, iterations=200):\n",
     "    predictor = CatBoostClassifier(iterations=iterations, verbose=0, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime \n",
     "\n",
     "def adaboost_regressor(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = AdaBoostRegressor(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime \n",
     "\n",
     "def xgboost_regressor(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = XGBRegressor(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime\n",
     "\n",
     "def catboost_regressor(X_train, y_train, X_test, y_test, iterations=200):\n",
     "    predictor = CatBoostRegressor(iterations=iterations, verbose=0, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 "
+    "    return r2, runtime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -352,13 +395,13 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = r\"G:\\Study\\iit kharagpur\\ML Lab\\Lab 1\\ML_Class_Tutorial\\datasets\\Breast Cancer Original (1).csv\"\n",
+    "path = r\"G:\\Study\\iit kharagpur\\ML Lab\\ML_CLASS\\datasets\\Breast Cancer Original (1).csv\"\n",
     "\n",
     "data = load_csv(path)\n",
     "data.head()"
@@ -373,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +441,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +465,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -527,44 +570,99 @@
      "output_type": "stream",
      "text": [
       "The accuracy of Logistic Regression is 97.37\n",
+      "The runtime is 0.02\n",
       "The accuracy of Decision Tree is 92.98\n",
+      "The runtime is 0.01\n",
       "The accuracy of Support Vector Classifier is 98.25\n",
+      "The runtime is 0.00\n",
       "The accuracy of AdaBoost is 97.37\n",
+      "The runtime is 0.55\n",
       "The accuracy of XGBoost is 95.61\n",
-      "The accuracy of CatBoost is 96.49\n"
+      "The runtime is 1.35\n",
+      "The accuracy of CatBoost is 96.49\n",
+      "The runtime is 1.67\n"
      ]
     }
    ],
    "source": [
     "# Logistic Regression\n",
-    "acc_lr = logistic_regression(X_train, y_train, X_test, y_test)\n",
+    "acc_lr, cf_lr, runtime = logistic_regression(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Logistic Regression is {acc_lr*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# Decision Tree\n",
-    "acc_dt = decision_tree_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_dt, cf_dt, runtime = decision_tree_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Decision Tree is {acc_dt*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# Support Vector Machine\n",
-    "acc_svm = support_vector_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_svm, cf_svm, runtime = support_vector_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Support Vector Classifier is {acc_svm*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# AdaBoost\n",
-    "acc_ada  = adaboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_ada, cf_ada, runtime = adaboost_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of AdaBoost is {acc_ada*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# XGBoost\n",
-    "acc_xg = xgboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_xg, cf_xg, runtime = xgboost_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of XGBoost is {acc_xg*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "#CatBoost\n",
-    "acc_cat = catboost_classifier(X_train, y_train, X_test, y_test)\n",
-    "print(f\"The accuracy of CatBoost is {acc_cat*100:.2f}\")"
+    "acc_cat, cf_cat, runtime = catboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "print(f\"The accuracy of CatBoost is {acc_cat*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[70  1]\n",
+      " [ 2 41]]\n",
+      "\n",
+      "\n",
+      "[[67  4]\n",
+      " [ 4 39]]\n",
+      "\n",
+      "\n",
+      "[[71  0]\n",
+      " [ 2 41]]\n",
+      "\n",
+      "\n",
+      "[[70  1]\n",
+      " [ 2 41]]\n",
+      "\n",
+      "\n",
+      "[[69  2]\n",
+      " [ 3 40]]\n",
+      "\n",
+      "\n",
+      "[[70  1]\n",
+      " [ 3 40]]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "confusion_matrices = [cf_lr, cf_dt, cf_svm, cf_ada, cf_xg, cf_cat]\n",
+    "for i in confusion_matrices:\n",
+    "    print(i)\n",
+    "    print('\\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_lab_venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -578,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
