--- a/Case-Study-7/heart.ipynb
+++ b/Case-Study-7/heart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "from sklearn.svm import SVC, SVR\n",
     "from xgboost import XGBClassifier, XGBRegressor\n",
     "from catboost import CatBoostClassifier, CatBoostRegressor\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,100 +56,149 @@
     "\n",
     "def logistic_regression(X_train, y_train, X_test, y_test):\n",
     "    predictor = LogisticRegression()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def support_vector_classifier(X_train, y_train, X_test, y_test, kernel='rbf'):\n",
     "    predictor = SVC(kernel=kernel)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def support_vector_regressor(X_train, y_train, X_test, y_test, kernel='rbf'):\n",
     "    predictor = SVR(kernel=kernel)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2\n",
+    "    return r2, runtime\n",
     "\n",
     "def decision_tree_classifier(X_train, y_train, X_test, y_test):\n",
     "    predictor = DecisionTreeClassifier()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy    \n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def decision_tree_regressor(X_train, y_train, X_test, y_test):\n",
     "    predictor = DecisionTreeRegressor()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime\n",
     "\n",
     "def linear_regression(X_train, y_train, X_test, y_test):\n",
     "    predictor = LinearRegression()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2\n",
+    "    return r2, runtime\n",
     "\n",
     "def adaboost_classifier(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = AdaBoostClassifier(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def xgboost_classifier(X_train, y_train, X_test, y_test, n_estimators=200, random_state=42):\n",
     "    predictor = XGBClassifier(n_estimators=n_estimators, random_state=random_state)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def catboost_classifier(X_train, y_train, X_test, y_test, iterations=200):\n",
     "    predictor = CatBoostClassifier(iterations=iterations, verbose=0, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime \n",
     "\n",
     "def adaboost_regressor(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = AdaBoostRegressor(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime \n",
     "\n",
     "def xgboost_regressor(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = XGBRegressor(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime\n",
     "\n",
     "def catboost_regressor(X_train, y_train, X_test, y_test, iterations=200):\n",
     "    predictor = CatBoostRegressor(iterations=iterations, verbose=0, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 "
+    "    return r2, runtime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "path = r\"G:\\Study\\iit kharagpur\\ML Lab\\Lab 1\\ML_Class_Tutorial\\datasets\\heart\"\n",
+    "path = r\"G:\\Study\\iit kharagpur\\ML Lab\\ML_CLASS\\datasets\\heart\"\n",
     "data_path = os.path.join(path,\"heart.dat\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -159,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +472,7 @@
        "[270 rows x 14 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +749,7 @@
        "[270 rows x 14 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +1039,7 @@
        "[216 rows x 13 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1008,44 +1058,83 @@
      "output_type": "stream",
      "text": [
       "The accuracy of Logistic Regression is 92.59\n",
-      "The accuracy of Decision Tree is 74.07\n",
+      "The runtime is 0.01\n",
+      "The accuracy of Decision Tree is 68.52\n",
+      "The runtime is 0.00\n",
       "The accuracy of Support Vector Classifier is 85.19\n",
+      "The runtime is 0.00\n",
       "The accuracy of AdaBoost is 81.48\n",
+      "The runtime is 0.28\n",
       "The accuracy of XGBoost is 83.33\n",
-      "The accuracy of CatBoost is 88.89\n"
+      "The runtime is 0.07\n",
+      "The accuracy of CatBoost is 88.89\n",
+      "The runtime is 0.34\n"
      ]
     }
    ],
    "source": [
     "# Logistic Regression\n",
-    "acc_lr = logistic_regression(X_train, y_train, X_test, y_test)\n",
+    "acc_lr, cf_lr, runtime = logistic_regression(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Logistic Regression is {acc_lr*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# Decision Tree\n",
-    "acc_dt = decision_tree_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_dt, cf_dt, runtime = decision_tree_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Decision Tree is {acc_dt*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# Support Vector Machine\n",
-    "acc_svm = support_vector_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_svm, cf_svm, runtime = support_vector_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Support Vector Classifier is {acc_svm*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# AdaBoost\n",
-    "acc_ada  = adaboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_ada, cf_ada, runtime = adaboost_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of AdaBoost is {acc_ada*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# XGBoost\n",
-    "acc_xg = xgboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_xg, cf_xg, runtime = xgboost_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of XGBoost is {acc_xg*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "#CatBoost\n",
-    "acc_cat = catboost_classifier(X_train, y_train, X_test, y_test)\n",
-    "print(f\"The accuracy of CatBoost is {acc_cat*100:.2f}\")"
+    "acc_cat, cf_cat, runtime = catboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "print(f\"The accuracy of CatBoost is {acc_cat*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32  1]\n",
+      " [ 3 18]]\n",
+      "\n",
+      "\n",
+      "[[32  1]\n",
+      " [ 5 16]]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "confusion_matrices = [cf_lr, cf_cat]\n",
+    "for i in confusion_matrices:\n",
+    "    print(i)\n",
+    "    print('\\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_lab_venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1059,7 +1148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
