--- a/Case-Study-6/ionosphere.ipynb
+++ b/Case-Study-6/ionosphere.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
     "from sklearn.svm import SVC, SVR\n",
     "from xgboost import XGBClassifier, XGBRegressor\n",
     "from catboost import CatBoostClassifier, CatBoostRegressor\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,98 +56,140 @@
     "\n",
     "def logistic_regression(X_train, y_train, X_test, y_test):\n",
     "    predictor = LogisticRegression()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def support_vector_classifier(X_train, y_train, X_test, y_test, kernel='rbf'):\n",
     "    predictor = SVC(kernel=kernel)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def support_vector_regressor(X_train, y_train, X_test, y_test, kernel='rbf'):\n",
     "    predictor = SVR(kernel=kernel)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2\n",
+    "    return r2, runtime\n",
     "\n",
     "def decision_tree_classifier(X_train, y_train, X_test, y_test):\n",
     "    predictor = DecisionTreeClassifier()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test,y_pred)\n",
-    "    return accuracy    \n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def decision_tree_regressor(X_train, y_train, X_test, y_test):\n",
     "    predictor = DecisionTreeRegressor()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime\n",
     "\n",
     "def linear_regression(X_train, y_train, X_test, y_test):\n",
     "    predictor = LinearRegression()\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
     "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2\n",
+    "    return r2, runtime\n",
     "\n",
     "def adaboost_classifier(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = AdaBoostClassifier(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def xgboost_classifier(X_train, y_train, X_test, y_test, n_estimators=200, random_state=42):\n",
     "    predictor = XGBClassifier(n_estimators=n_estimators, random_state=random_state)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime\n",
     "\n",
     "def catboost_classifier(X_train, y_train, X_test, y_test, iterations=200):\n",
     "    predictor = CatBoostClassifier(iterations=iterations, verbose=0, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "    return accuracy\n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
+    "    accuracy = accuracy_score(y_test,y_pred)\n",
+    "    cf = confusion_matrix(y_test, y_pred)\n",
+    "    return accuracy, cf, runtime \n",
     "\n",
     "def adaboost_regressor(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = AdaBoostRegressor(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime \n",
     "\n",
     "def xgboost_regressor(X_train, y_train, X_test, y_test, n_estimators=200):\n",
     "    predictor = XGBRegressor(n_estimators=n_estimators, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 \n",
+    "    return r2, runtime\n",
     "\n",
     "def catboost_regressor(X_train, y_train, X_test, y_test, iterations=200):\n",
     "    predictor = CatBoostRegressor(iterations=iterations, verbose=0, random_state=42)\n",
+    "    start_time = time.time()\n",
     "    predictor.fit(X_train, y_train)\n",
-    "    y_pred = predictor.predict(X_test)   \n",
+    "    end_time = time.time()\n",
+    "    runtime = end_time - start_time\n",
+    "    y_pred = predictor.predict(X_test)\n",
     "    r2 = r2_score(y_test,y_pred)\n",
-    "    return r2 "
+    "    return r2, runtime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "path = r\"G:\\Study\\iit kharagpur\\ML Lab\\Lab 1\\ML_Class_Tutorial\\datasets\\ionosphere\"\n",
+    "path = r\"G:\\Study\\iit kharagpur\\ML Lab\\ML_CLASS\\datasets\\ionosphere\"\n",
     "data_path = os.path.join(path,\"ionosphere.data\")"
    ]
   },
@@ -159,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +562,7 @@
        "[351 rows x 35 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +936,7 @@
        "[351 rows x 35 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +990,7 @@
        "        -0.67833872, -0.01398075]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -966,44 +1009,87 @@
      "output_type": "stream",
      "text": [
       "The accuracy of Logistic Regression is 85.92\n",
-      "The accuracy of Decision Tree is 87.32\n",
+      "The runtime is 0.03\n",
+      "The accuracy of Decision Tree is 85.92\n",
+      "The runtime is 0.01\n",
       "The accuracy of Support Vector Classifier is 94.37\n",
+      "The runtime is 0.01\n",
       "The accuracy of AdaBoost is 88.73\n",
+      "The runtime is 0.63\n",
       "The accuracy of XGBoost is 92.96\n",
-      "The accuracy of CatBoost is 91.55\n"
+      "The runtime is 0.11\n",
+      "The accuracy of CatBoost is 91.55\n",
+      "The runtime is 1.24\n"
      ]
     }
    ],
    "source": [
     "# Logistic Regression\n",
-    "acc_lr = logistic_regression(X_train, y_train, X_test, y_test)\n",
+    "acc_lr, cf_lr, runtime = logistic_regression(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Logistic Regression is {acc_lr*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# Decision Tree\n",
-    "acc_dt = decision_tree_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_dt, cf_dt, runtime = decision_tree_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Decision Tree is {acc_dt*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# Support Vector Machine\n",
-    "acc_svm = support_vector_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_svm, cf_svm, runtime = support_vector_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of Support Vector Classifier is {acc_svm*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# AdaBoost\n",
-    "acc_ada  = adaboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_ada, cf_ada, runtime = adaboost_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of AdaBoost is {acc_ada*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "# XGBoost\n",
-    "acc_xg = xgboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "acc_xg, cf_xg, runtime = xgboost_classifier(X_train, y_train, X_test, y_test)\n",
     "print(f\"The accuracy of XGBoost is {acc_xg*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")\n",
     "\n",
     "#CatBoost\n",
-    "acc_cat = catboost_classifier(X_train, y_train, X_test, y_test)\n",
-    "print(f\"The accuracy of CatBoost is {acc_cat*100:.2f}\")"
+    "acc_cat, cf_cat, runtime = catboost_classifier(X_train, y_train, X_test, y_test)\n",
+    "print(f\"The accuracy of CatBoost is {acc_cat*100:.2f}\")\n",
+    "print(f\"The runtime is {runtime:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[24  4]\n",
+      " [ 0 43]]\n",
+      "\n",
+      "\n",
+      "[[23  5]\n",
+      " [ 0 43]]\n",
+      "\n",
+      "\n",
+      "[[22  6]\n",
+      " [ 0 43]]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "confusion_matrices = [cf_svm, cf_xg, cf_cat]\n",
+    "for i in confusion_matrices:\n",
+    "    print(i)\n",
+    "    print('\\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_lab_venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1017,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
