added labels to confusion matrices

--- a/Case-Study-3/hepatitis.ipynb
+++ b/Case-Study-3/hepatitis.ipynb
@@ -1672,25 +1672,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "linear regression\n",
       "[[ 3  4]\n",
       " [ 1 23]]\n",
       "\n",
       "\n",
+      "decision tree\n",
       "[[ 3  4]\n",
       " [ 2 22]]\n",
       "\n",
       "\n",
+      "support vector machine\n",
+      "[[ 1  6]\n",
+      " [ 2 22]]\n",
+      "\n",
+      "\n",
+      "adaboost\n",
+      "[[ 1  6]\n",
+      " [ 4 20]]\n",
+      "\n",
+      "\n",
+      "xgboost\n",
       "[[ 2  5]\n",
       " [ 2 22]]\n",
       "\n",
       "\n",
+      "catboost\n",
       "[[ 1  6]\n",
       " [ 0 24]]\n",
       "\n",
@@ -1699,9 +1713,10 @@
     }
    ],
    "source": [
-    "confusion_matrices = [cf_lr, cf_dt, cf_xg, cf_cat]\n",
+    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
-    "    print(i)\n",
+    "    print(i[1])\n",
+    "    print(i[0])\n",
     "    print('\\n')"
    ]
   }
