--- a/Case-Study-4/australian.ipynb
+++ b/Case-Study-4/australian.ipynb
@@ -843,33 +843,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "linear regression\n",
       "[[78  9]\n",
       " [ 9 42]]\n",
       "\n",
       "\n",
+      "decision tree\n",
       "[[80  7]\n",
       " [ 9 42]]\n",
       "\n",
       "\n",
+      "support vector machine\n",
       "[[74 13]\n",
       " [ 8 43]]\n",
       "\n",
       "\n",
+      "adaboost\n",
       "[[81  6]\n",
       " [12 39]]\n",
       "\n",
       "\n",
+      "xgboost\n",
       "[[78  9]\n",
       " [10 41]]\n",
       "\n",
       "\n",
+      "catboost\n",
       "[[79  8]\n",
       " [ 9 42]]\n",
       "\n",
@@ -878,9 +884,10 @@
     }
    ],
    "source": [
-    "confusion_matrices = [cf_lr, cf_dt, cf_svm, cf_ada, cf_xg, cf_cat]\n",
+    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
-    "    print(i)\n",
+    "    print(i[1])\n",
+    "    print(i[0])\n",
     "    print('\\n')"
    ]
   }
