--- a/Case-Study-5/sonar.ipynb
+++ b/Case-Study-5/sonar.ipynb
@@ -972,28 +972,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "linear regression\n",
+      "[[18  8]\n",
+      " [ 2 14]]\n",
+      "\n",
+      "\n",
+      "decision tree\n",
+      "[[16 10]\n",
+      " [ 4 12]]\n",
+      "\n",
+      "\n",
+      "support vector machine\n",
       "[[23  3]\n",
       " [ 1 15]]\n",
       "\n",
       "\n",
+      "adaboost\n",
+      "[[20  6]\n",
+      " [ 3 13]]\n",
+      "\n",
+      "\n",
+      "xgboost\n",
       "[[21  5]\n",
       " [ 2 14]]\n",
+      "\n",
+      "\n",
+      "catboost\n",
+      "[[19  7]\n",
+      " [ 3 13]]\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "confusion_matrices = [cf_svm, cf_xg]\n",
+    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
-    "    print(i)\n",
+    "    print(i[1])\n",
+    "    print(i[0])\n",
     "    print('\\n')"
    ]
   }
