--- a/Case-Study-7/heart.ipynb
+++ b/Case-Study-7/heart.ipynb
@@ -1106,17 +1106,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "linear regression\n",
       "[[32  1]\n",
       " [ 3 18]]\n",
       "\n",
       "\n",
+      "decision tree\n",
+      "[[22 11]\n",
+      " [ 6 15]]\n",
+      "\n",
+      "\n",
+      "support vector machine\n",
+      "[[31  2]\n",
+      " [ 6 15]]\n",
+      "\n",
+      "\n",
+      "adaboost\n",
+      "[[29  4]\n",
+      " [ 6 15]]\n",
+      "\n",
+      "\n",
+      "xgboost\n",
+      "[[30  3]\n",
+      " [ 6 15]]\n",
+      "\n",
+      "\n",
+      "catboost\n",
       "[[32  1]\n",
       " [ 5 16]]\n",
       "\n",
@@ -1125,9 +1147,10 @@
     }
    ],
    "source": [
-    "confusion_matrices = [cf_lr, cf_cat]\n",
+    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
-    "    print(i)\n",
+    "    print(i[1])\n",
+    "    print(i[0])\n",
     "    print('\\n')"
    ]
   }
