--- a/Case-Study-1/breast_cancer.ipynb
+++ b/Case-Study-1/breast_cancer.ipynb
@@ -618,33 +618,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "linear regression\n",
       "[[70  1]\n",
       " [ 2 41]]\n",
       "\n",
       "\n",
+      "decision tree\n",
       "[[67  4]\n",
       " [ 4 39]]\n",
       "\n",
       "\n",
+      "support vector machine\n",
       "[[71  0]\n",
       " [ 2 41]]\n",
       "\n",
       "\n",
+      "adaboost\n",
       "[[70  1]\n",
       " [ 2 41]]\n",
       "\n",
       "\n",
+      "xgboost\n",
       "[[69  2]\n",
       " [ 3 40]]\n",
       "\n",
       "\n",
+      "catboost\n",
       "[[70  1]\n",
       " [ 3 40]]\n",
       "\n",
@@ -653,9 +659,10 @@
     }
    ],
    "source": [
-    "confusion_matrices = [cf_lr, cf_dt, cf_svm, cf_ada, cf_xg, cf_cat]\n",
+    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
-    "    print(i)\n",
+    "    print(i[1])\n",
+    "    print(i[0])\n",
     "    print('\\n')"
    ]
   }
