--- a/Case-Study-6/ionosphere.ipynb
+++ b/Case-Study-6/ionosphere.ipynb
@@ -1057,21 +1057,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "linear regression\n",
+      "[[18 10]\n",
+      " [ 0 43]]\n",
+      "\n",
+      "\n",
+      "decision tree\n",
+      "[[19  9]\n",
+      " [ 1 42]]\n",
+      "\n",
+      "\n",
+      "support vector machine\n",
       "[[24  4]\n",
       " [ 0 43]]\n",
       "\n",
       "\n",
+      "adaboost\n",
+      "[[21  7]\n",
+      " [ 1 42]]\n",
+      "\n",
+      "\n",
+      "xgboost\n",
       "[[23  5]\n",
       " [ 0 43]]\n",
       "\n",
       "\n",
+      "catboost\n",
       "[[22  6]\n",
       " [ 0 43]]\n",
       "\n",
@@ -1080,9 +1098,10 @@
     }
    ],
    "source": [
-    "confusion_matrices = [cf_svm, cf_xg, cf_cat]\n",
+    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
-    "    print(i)\n",
+    "    print(i[1])\n",
+    "    print(i[0])\n",
     "    print('\\n')"
    ]
   }
