completed the report

--- a/Case-Study-1/breast_cancer.ipynb
+++ b/Case-Study-1/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -570,17 +570,17 @@
      "output_type": "stream",
      "text": [
       "The accuracy of Logistic Regression is 97.37\n",
-      "The runtime is 0.02\n",
-      "The accuracy of Decision Tree is 92.98\n",
+      "The runtime is 0.03\n",
+      "The accuracy of Decision Tree is 93.86\n",
       "The runtime is 0.01\n",
       "The accuracy of Support Vector Classifier is 98.25\n",
       "The runtime is 0.00\n",
       "The accuracy of AdaBoost is 97.37\n",
-      "The runtime is 0.55\n",
+      "The runtime is 0.61\n",
       "The accuracy of XGBoost is 95.61\n",
-      "The runtime is 1.35\n",
+      "The runtime is 0.19\n",
       "The accuracy of CatBoost is 96.49\n",
-      "The runtime is 1.67\n"
+      "The runtime is 0.93\n"
      ]
     }
    ],
@@ -618,20 +618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "linear regression\n",
+      "logistic regression\n",
       "[[70  1]\n",
       " [ 2 41]]\n",
       "\n",
       "\n",
       "decision tree\n",
-      "[[67  4]\n",
+      "[[68  3]\n",
       " [ 4 39]]\n",
       "\n",
       "\n",
@@ -659,7 +659,7 @@
     }
    ],
    "source": [
-    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
+    "confusion_matrices = [[cf_lr, \"logistic regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
     "    print(i[1])\n",
     "    print(i[0])\n",
