--- a/Case-Study-3/hepatitis.ipynb
+++ b/Case-Study-3/hepatitis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "[155 rows x 20 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "[155 rows x 20 columns]"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
        "[155 rows x 20 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
        "[155 rows x 10 columns]"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1605,7 +1605,7 @@
        "(124, 10)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1625,16 +1625,16 @@
      "text": [
       "The accuracy of Logistic Regression is 83.87\n",
       "The runtime is 0.00\n",
-      "The accuracy of Decision Tree is 80.65\n",
-      "The runtime is 0.00\n",
+      "The accuracy of Decision Tree is 77.42\n",
+      "The runtime is 0.01\n",
       "The accuracy of Support Vector Classifier is 74.19\n",
       "The runtime is 0.00\n",
       "The accuracy of AdaBoost is 67.74\n",
       "The runtime is 0.31\n",
       "The accuracy of XGBoost is 77.42\n",
-      "The runtime is 0.08\n",
+      "The runtime is 0.22\n",
       "The accuracy of CatBoost is 80.65\n",
-      "The runtime is 0.42\n"
+      "The runtime is 0.53\n"
      ]
     }
    ],
@@ -1672,20 +1672,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "linear regression\n",
+      "losgistic regression\n",
       "[[ 3  4]\n",
       " [ 1 23]]\n",
       "\n",
       "\n",
       "decision tree\n",
-      "[[ 3  4]\n",
+      "[[ 2  5]\n",
       " [ 2 22]]\n",
       "\n",
       "\n",
@@ -1713,7 +1713,7 @@
     }
    ],
    "source": [
-    "confusion_matrices = [[cf_lr, \"linear regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
+    "confusion_matrices = [[cf_lr, \"losgistic regression\"], [cf_dt, 'decision tree'], [cf_svm, \"support vector machine\"], [cf_ada, 'adaboost'], [cf_xg, \"xgboost\"], [cf_cat, 'catboost']]\n",
     "for i in confusion_matrices:\n",
     "    print(i[1])\n",
     "    print(i[0])\n",
